Init wasm client module.

--- a/jdocuments-wasm-client/index.html
+++ b/jdocuments-wasm-client/index.html
@@ -7,5 +7,10 @@
     <title>JDocuments</title>
 </head>
 <body>
+    <canvas id="canvas"></canvas>
+    <script type="module">
+        import init from "jdocuments_wasm_client.js";
+        init();
+    </script>
 </body>
 </html>
