--- a/jdocuments-wasm-client/index.html
+++ b/jdocuments-wasm-client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Slint + WASM</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="resources/icon.png">
 </head>
     <body>
         <canvas id="canvas"></canvas>
