--- a/jdocuments-wasm-client/index.html
+++ b/jdocuments-wasm-client/index.html
@@ -11,8 +11,11 @@
         <script type="module">
             function resizeCanvas() {
                 const canvas = document.querySelector("canvas");
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerHeight;
+                const dpr = window.devicePixelRatio || 1;
+                canvas.style.width  = window.innerWidth + "px";
+                canvas.style.height = window.innerHeight + "px";
+                canvas.width  = Math.floor(window.innerWidth  * dpr);
+                canvas.height = Math.floor(window.innerHeight * dpr);
             }
             window.addEventListener("resize", resizeCanvas);
             window.addEventListener("load", resizeCanvas);
